新家一個彈跳照片外掛

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -865,6 +865,7 @@ h6 {
 /* =======  Post  ======= */
 .post .item {
     margin-bottom: 0px;
+    display: block;
 }
 .post .item .post-img {
     overflow: hidden;
